// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteRequestBaseUrl should append to the request base url when overwrite is false 1`] = `
{
  "host": [
    "{{baseUrl}}",
    "example",
    "com",
  ],
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should not overwrite the request base url 1`] = `
{
  "host": [
    "{{baseUrl}}",
  ],
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should overwrite the request base url with a blank value 1`] = `
{
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should overwrite the request base url with a domain name 1`] = `
{
  "host": [
    "example",
    "com",
  ],
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should overwrite the request base url with a full domain name 1`] = `
{
  "host": [
    "www",
    "example",
    "com",
  ],
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "protocol": "https",
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should overwrite the request base url with a full domain name with port 1`] = `
{
  "host": [
    "www",
    "example",
    "com",
  ],
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "port": "3000",
  "protocol": "https",
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should overwrite the request base url with a variable 1`] = `
{
  "host": [
    "{{foo-bar-baz}}",
  ],
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should overwrite the request base url with a variable and path 1`] = `
{
  "host": [
    "{{foo-bar-baz}}",
  ],
  "path": [
    "path",
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;

exports[`overwriteRequestBaseUrl should remove the request base url when remove is true 1`] = `
{
  "path": [
    "crm",
    "companies",
    ":id",
  ],
  "query": [
    {
      "description": {
        "content": "Include raw response. Mostly used for debugging purposes",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "raw",
      "value": "true",
    },
  ],
  "variable": [
    {
      "description": {
        "content": "(Required) ID of the record you are acting upon.",
        "type": "text/plain",
      },
      "disabled": false,
      "key": "id",
      "type": "any",
      "value": "123456",
    },
  ],
}
`;
